--- a/styles/add_room.css
+++ b/styles/add_room.css
@@ -11,45 +11,51 @@ body {
 /* Sidebar Styles */
 .sidebar {
     width: 250px;
-    height: 100%;
-    background-color: #333;
+    background-color: #2c3e50;
     color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-top: 20px;
-    z-index: 1000;
+    height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center; 
 }
 
-.sidebar-content h2 {
+.elem-inside{
+    margin-top: 60px;
+}
+
+.sidebar h2 {
+    margin: 0 0 20px;
     text-align: center;
-    margin-bottom: 20px;
-    color: #fff;
+    margin-top: 30px;
 }
 
-.sidebar-content ul {
-    list-style: none;
+.sidebar ul {
+    list-style-type: none;
     padding: 0;
 }
 
-.sidebar-content ul li {
-    padding: 10px;
-    text-align: center;
+.sidebar ul li {
+    margin: 15px 0;
 }
 
-.sidebar-content ul li a {
+.sidebar ul li a {
     color: white;
     text-decoration: none;
     display: block;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    cursor: pointer;
 }
 
-.sidebar-content ul li a:hover {
-    background-color: #444;
+.sidebar ul li a:hover {
+    background-color: #34495e;
 }
 
 /* Main Content Container Styles */
 .container {
-    margin-left: 250px;
+   
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
