--- a/styles/edit_room.css
+++ b/styles/edit_room.css
@@ -15,26 +15,30 @@ body {
     padding: 20px;
     box-sizing: border-box;
     background-color: #fff;
-    margin-left: 250px; /* Adjust based on sidebar width */
+    z-index: 1;
+    
 }
 
 /* Sidebar */
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
     width: 250px;
-    background-color: #333;
+    background-color: #2c3e50;
     color: white;
-    padding-top: 20px;
+    height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center; 
 }
 
-.sidebar .sidebar-content h2 {
-    color: #fff;
+.elem-inside{
+    margin-top: 60px;
+}
+
+.sidebar h2 {
+    margin: 0 0 20px;
     text-align: center;
-    font-size: 24px;
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .sidebar ul {
@@ -43,8 +47,7 @@ body {
 }
 
 .sidebar ul li {
-    padding: 15px;
-    text-align: center;
+    margin: 15px 0;
 }
 
 .sidebar ul li a {
@@ -52,17 +55,13 @@ body {
     text-decoration: none;
     display: block;
     padding: 10px;
-    transition: background-color 0.3s ease;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    cursor: pointer;
 }
 
 .sidebar ul li a:hover {
-    background-color: #575757;
-}
-
-/* Header */
-.header {
-    text-align: center;
-    margin-bottom: 20px;
+    background-color: #34495e;
 }
 
 .header h1 {
