--- a/styles/add_room.css
+++ b/styles/add_room.css
@@ -37,6 +37,8 @@ body {
 
 .sidebar ul li {
     margin: 15px 0;
+    background-color: #34495e;
+    border-radius: 5px; 
 }
 
 .sidebar ul li a {
@@ -55,7 +57,6 @@ body {
 
 /* Main Content Container Styles */
 .container {
-   
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
@@ -74,10 +75,7 @@ body {
     align-items: center;
 }
 
-.header h1 {
-    margin: 0;
-    color: #0077cc;
-}
+
 
 .search-container {
     position: relative;
@@ -91,20 +89,6 @@ body {
     border-radius: 4px;
 }
 
-.search-container button {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 10px 15px;
-    background-color: #0077cc;
-    color: white;
-    border: none;
-    border-radius: 4px;
-}
-
-.search-container button:hover {
-    background-color: #005fa3;
-}
 
 /* Form Styles */
 .form-container {
@@ -157,7 +141,7 @@ input[type="checkbox"] {
 .submit-btn {
     width: 100%;
     padding: 10px;
-    background-color: #0077cc;
+    background-color: #2c3e50;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -166,7 +150,7 @@ input[type="checkbox"] {
 }
 
 .submit-btn:hover {
-    background-color: #005fa3;
+    background-color: #495f76;
 }
 
 /* Modal Styles */
