--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@ html {
 .side {
   flex: 1;
   background-color: #a9856c;
-  background-image: linear-gradient(19deg, #a9856c 0%, #dacfcc 100%);
+  background-image: linear-gradient(19deg, #34495e 0%, #96a2b4 100%);
   display: flex;
   flex-direction: column;
   justify-content: center; /* Center items vertically */
@@ -123,10 +123,10 @@ main .submit {
 
 main .submit button {
   /* background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%); */
-  background-image: linear-gradient(19deg, #a9856c 0%, #dacfcc 100%);
+  background-image: linear-gradient(19deg, #34495e 0%, #7386a6 100%);
   color: #ffffff;
   height: 40px;
-  width: 100%;
+  width: 300px;
   padding-top: 10px;
   border-radius: 50px;
 }
@@ -159,10 +159,42 @@ main .submit button:hover {
 
 .info p a:hover {
   color: black;
+  cursor: pointer;
 }
 
 @media (max-width: 900px) {
   .side {
       display: none;
   }
+}
+
+
+.signup-container {
+  
+  text-align: center;
+  width: 300px;
+  margin: 20px auto;
+  margin-left: 55px;
+  
+}
+
+.signup-container p {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 12px;
+}
+
+.signup-button {
+  background-image: linear-gradient(19deg, #34495e 0%, #7283aa 100%);
+  color: #ffffff;
+  height: 40px;
+  width: 100%;
+  padding-top: 10px;
+  border-radius: 50px;
+}
+
+.signup-button:hover {
+  transition: 0.19s;
+  cursor: pointer;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.281);
 }
