--- a/styles/footers.css
+++ b/styles/footers.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
@@ -47,4 +47,4 @@ footer {
   .left-footer a {
     margin-left: 4px;
   }
-  
+   */
